components/navbar/navbar.css
html {
  scroll-padding-top: var(--bar-height); /* When clicking in-page links, offset scroll so content is not hidden behind the fixed navbar */
}

body {
  padding-top: var(--bar-height); /* Prevents content from being hidden behind the fixed navbar */
}

.menu-hamburger-button svg {
  width: 24px;
  height: 24px;
  fill: var(--color-neutral-900);
}

.menu-hamburger-button {
  background: none;
  border: none;
  cursor: pointer;
}

.navbar {
  background-color: var(--color-primary);
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
  height: var(--bar-height);
  padding: 0 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;

  /* fixed navbar: */
  position: fixed; /* Keeps navbar fixed to viewport even when scrolling */
  top: 0; /* Required to define vertical position when using fixed positioning */
  left: 0; /* Required to define horizontal position when using fixed positioning */
  width: 100%; /* Ensures it still spans full width since fixed removes normal block behavior */
}

/* Mobile menu starts off-screen and slides in when .show is added */
.mobile-menu {
   /* style */
  font-weight: var(--font-weight-bold);
  font-size: var(--font-size-l);
  background-color: var(--color-secondary);

  /* layout & positioning*/
  display: flex;
  flex-direction: column;
  gap: 35px;
  position: fixed;
  top: var(--bar-height); 
  left: 0;
  z-index: 1000;

  /* size */
  padding: 55px 0 0 60px;
  width: 100vw;
  height: calc(100vh - var(--bar-height));
  
  /* animation state (hidden by default) */
  transform: translateX(100%);
  transition: transform 0.5s ease;
}

.mobile-menu.show {
  transform: translateX(0%); /* Moves menu from off-screen to visible position */
}

.logo-name-link,
.tablet-desktop-menu a,
.menu-hamburger-button,
.mobile-menu a {
  user-select: none;
  -webkit-tap-highlight-color: transparent; /* Remove mobile tap highlight */

  /* Increase clickable area */
  padding: var(--clickable-area-padding);
}

/* tablet-desktop: */

.tablet-desktop-menu {
  display: flex;
  gap: 40px;
  font-weight: var(--font-weight-bold);
  font-size: var(--font-size-m);
}

.tablet-desktop-menu a {
  display: inline-block; /* Makes border match text width instead of full row width */
  border-bottom: 3px solid transparent;
  transition: border-color 0.2s ease;
}

/* Restrict hover to devices with hover capability and fine pointer */
@media (hover: hover) and (pointer: fine) {
  .tablet-desktop-menu a:hover {
    border-bottom-color: var(--color-tertiary);
  }
}

/* Component mediaqueries */

/* 0-767px */
@media (max-width: 767px) {
  .tablet-desktop-menu {
    display: none; /* Hide desktop menu on mobile */
  }
}

/* 768... */
@media (min-width: 768px) {
  .menu-hamburger-button,
  .mobile-menu {
    display: none; 
    /* Hide hamburger button and mobile menu on desktop screens. In the case of the mobile menu, this prevents it from remaining visible after resizing from mobile to desktop. */
  }
}

